--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -12,7 +12,7 @@
 <script src="../assets/index.js" defer></script>
 </head>
 
-<body>
+<body class="body-lineup">
 <!-- ============ header ========== -->
     <header>
 
@@ -35,85 +35,85 @@
     <!-- ========== fin header ========== -->
     <!-- ========== main ========== -->
 
-    <main class="text-center">
-        <div class="box text-center text-white shadow-lg">
+    <main class="text-center pt-5 pb-5">
+        <div class="text-center text-white ">
             <h1 class="pt-5"> ALL LINE-UP</h1>
             <br>
-            <div class=" row  row-cols-1 row-cols-lg-5 d-flex justify-content-evenly ">
-                <a href="lineup.html"><button type="submit" class=" col mt-2 mb-2  p-2 w-100 text-center  ">All</button></a>
-                <a href="../autres/friday.html"><button type="submit" class=" col mt-2 mb-2  p-2 w-100  text-center  ">Friday 1st</button></a>
-                <a href="../autres/saturday.html"><button type="submit" class=" col mt-2 mb-2  p-2 w-100  text-center  ">Saturday 2nd</button></a>
-                <a href="../autres/sunday.html"><button type="submit" class=" col mt-2 mb-2  p-2 w-100 text-center ">Sunday 3rd</button></a>
+            <div class=" row row-cols-1 row-cols-lg-5 d-flex justify-content-evenly p-5 ">
+                <a href="lineup.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100 text-center  ">All</button></a>
+                <a href="../autres/friday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Friday 1st</button></a>
+                <a href="../autres/saturday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100  text-center  ">Saturday 2nd</button></a>
+                <a href="../autres/sunday.html"><button type="submit" class="box col mt-2 mb-2  p-3 w-100 text-center ">Sunday 3rd</button></a>
             </div>
 
             <br>
             <div class=" row row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-evenly m-lg-5">
                 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-5">
+                    <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="box rounded-5 p-0 ">
                     <p class="mt-3">1plike Prime</p></a>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/fraise.jpg_large" alt="ASAP" class="rounded-5  ">
-                    <p class="mt-3">Fraise OASIS</p>
+                    <img src="../assets/img/fraise.jpg_large" alt="ASAP" class="box rounded-5 p-0   ">
+                    <p class="mt-3">Fraise</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-5  ">
+                    <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="box rounded-5 p-0   ">
                         <p class="mt-3">Mr. Léonide</p></a>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-5  ">
+                <div class="col colx m-1"><img src="../assets/img/gattouz.png" alt="gattouz" class="box rounded-5 p-0   ">
                     <p class="mt-3">Gattouz</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/fave.jpg" alt="macaron" class="rounded-5  ">
+                    <img src="../assets/img/fave.jpg" alt="macaron" class="box rounded-5 p-0   ">
                     <p class="mt-3"> FAVÉÉÉ</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-5  ">
+                    <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="box rounded-5 p-0   ">
                         <p class="mt-3">El Barto</p></a>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/kaaris.PNG" alt="pims" class="rounded-5  ">
+                <div class="col colx m-1"><img src="../assets/img/kaaris.PNG" alt="pims" class="box rounded-5 p-0   ">
                     <p class="mt-3">Kaaris</p>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/furry.jpg" alt="ASAP" class="rounded-5  ">
-                    <p class="mt-3">Timéo la Zanga</p>
+                <div class="col colx m-1"><img src="../assets/img/furry.jpg" alt="ASAP" class="box rounded-5 p-0   ">
+                    <p class="mt-3">Timéo </p>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/kitty.gif" alt="kitty" class="rounded-5  ">
+                <div class="col colx m-1"><img src="../assets/img/kitty.gif" alt="kitty" class="box rounded-5 p-0   ">
                     <p class="mt-3">Hello Kitty</p>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/jew.gif" alt="macaron" class="rounded-5  ">
+                <div class="col colx m-1"><img src="../assets/img/jew.gif" alt="macaron" class="box rounded-5 p-0   ">
                     <p class="mt-3">J.E.W.</p>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/bassem.jpg" alt="macaron" class="rounded-5  ">
+                <div class="col colx m-1"><img src="../assets/img/bassem.jpg" alt="macaron" class="box rounded-5 p-0   ">
                     <p class="mt-3">Bassem</p>
                 </div>
 
-                <div class="col colx m-1"><img src="../assets/img/frog.jpg" alt="bee" class="rounded-5  ">
+                <div class="col colx m-1"><img src="../assets/img/frog.jpg" alt="bee" class="box rounded-5 p-0   ">
                     <p class="mt-3">Crazy Frog</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/kirby.jpg" alt="ASAP" class="rounded-5  ">
+                    <img src="../assets/img/kirby.jpg" alt="ASAP" class="box rounded-5 p-0   ">
                     <p class="mt-3">Astérion</p>
                 </div>
 
                 <div class="col colx m-1">
-                    <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-5  ">
+                    <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="box rounded-5 p-0   ">
                         <p class="mt-3">Julien Naty</p></a>
                 </div>
 
                 <div class="col colx m-1">
-                    <img src="../assets/img/bee.gif" alt="bee" class="rounded-5  ">
+                    <img src="../assets/img/bee.gif" alt="bee" class="box rounded-5 p-0   ">
                     <p class="mt-3">Killer Bee</p>
                 </div>
             </div>
@@ -121,22 +121,22 @@
         <br>
         <div class="box text-center text-white wh-100 ">
             <div class="m-5">
-                <h1 class="pt-5">SCHEDULE</h1>
+                <h1 class="">SCHEDULE</h1>
             </div>
 
             <div class="w-100 pb-5">
                 <table class="table table-bordered w-75 w-lg-50 mx-auto ">
                     <thead>
                         <tr>
-                            <th class="bg-dark text-white">TIME</th>
-                            <th class="bg-dark text-white">FRI. 1</th>
-                            <th class="bg-dark text-white">SAT. 2</th>
-                            <th class="bg-dark text-white">SUN. 3</th>
+                            <th class="bg-transparent text-white">TIME</th>
+                            <th class="bg-transparent text-white">FRI. 1</th>
+                            <th class="bg-transparent text-white">SAT. 2</th>
+                            <th class="bg-transparent text-white">SUN. 3</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr >
-                            <td class="bg-dark text-white"> 1PM</td>
+                            <td class="bg-transparent text-white"> 1PM</td>
                             <td class=" bg-primary text-white"> Open</td>
                             <td class="bg-primary text-white"> Open</td>
                             <td class="bg-primary text-white"> Open</td>
@@ -144,87 +144,87 @@
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 2PM - 3PM</td>
-                            <td class="bg-dark text-white"> </td>
-                            <td class="bg-secondary text-white">Killer Bee </td>
-                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-transparent text-white"> 2PM - 3PM</td>
+                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-white text-secondary">Killer Bee </td>
+                            <td class="bg-transparent text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 3PM - 4PM</td>
-                            <td class="bg-secondary text-white"> J.E.W. </td>
-                            <td class="bg-dark text-white"> </td>
-                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-transparent text-white"> 3PM - 4PM</td>
+                            <td class="bg-white text-secondary"> J.E.W. </td>
+                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-transparent text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 4PM - 5PM</td>
-                            <td class="bg-dark text-white"> </td>
-                            <td class="bg-secondary text-white">Crazy Frog </td>
-                            <td class="bg-secondary text-white">Astérion </td>
+                            <td class="bg-transparent text-white"> 4PM - 5PM</td>
+                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-white text-secondary">Crazy Frog </td>
+                            <td class="bg-white text-secondary">Astérion </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 5PM - 6PM</td>
-                            <td class="bg-secondary text-white"> FAVÉÉÉ </td>
-                            <td class="bg-secondary text-white">Kaaris </td>
-                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-transparent text-white"> 5PM - 6PM</td>
+                            <td class="bg-white text-secondary"> FAVÉÉÉ </td>
+                            <td class="bg-white text-secondary">Kaaris </td>
+                            <td class="bg-transparent text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 6PM - 7PM</td>
-                            <td class="bg-dark text-white"> </td>
-                            <td class="bg-dark text-white"> </td>
-                            <td class="bg-secondary text-white">El Barto</td>
+                            <td class="bg-transparent text-white"> 6PM - 7PM</td>
+                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-white text-secondary">El Barto</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 7PM - 8PM</td>
-                            <td class="bg-secondary text-white"> Fraise </td>
-                            <td class="bg-dark text-white"> </td>
-                            <td class="bg-secondary text-white"> 1pliké140 prime</td>
+                            <td class="bg-transparent text-white"> 7PM - 8PM</td>
+                            <td class="bg-white text-secondary"> Fraise </td>
+                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-white text-secondary"> 1pliké140 prime</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 8PM - 9PM</td>
-                            <td class="bg-secondary text-white"> Bassem</td>
-                            <td class="bg-dark text-white"> </td>
-                            <td class="bg-secondary text-white">Hello Kitty </td>
+                            <td class="bg-transparent text-white"> 8PM - 9PM</td>
+                            <td class="bg-white text-secondary"> Bassem</td>
+                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-white text-secondary">Hello Kitty </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 9PM - 10PM</td>
-                            <td class="bg-dark text-white"> </td>
-                            <td class="bg-secondary text-white">Julien Naty </td>
-                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-transparent text-white"> 9PM - 10PM</td>
+                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-white text-secondary">Julien Naty </td>
+                            <td class="bg-transparent text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 10PM - 11PM</td>
-                            <td class="bg-dark text-white"> </td>
-                            <td class="bg-secondary text-white"> Gattouz</td>
-                            <td class="bg-secondary text-white"> Mr. Léonide</td>
+                            <td class="bg-transparent text-white"> 10PM - 11PM</td>
+                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-white text-secondary"> Gattouz</td>
+                            <td class="bg-white text-secondary"> Mr. Léonide</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 11PM - 12PM</td>
-                            <td class="bg-secondary text-white">Timéo la Zanga </td>
-                            <td class="bg-dark text-white"> </td>
-                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-transparent text-white"> 11PM - 12PM</td>
+                            <td class="bg-white text-secondary">Timéo la Zanga </td>
+                            <td class="bg-transparent text-white"> </td>
+                            <td class="bg-transparent text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-dark text-white"> 1AM</td>
+                            <td class="bg-transparent text-white"> 1AM</td>
                             <td class="bg-danger text-white"> Closed</td>
                             <td class="bg-danger text-white"> Closed</td>
                             <td class="bg-danger text-white"> Closed</td>
