--- a/autres/ticket.html
+++ b/autres/ticket.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 
-<body>
+<body class="body-ticket">
 <!-- ============ header ========== -->
 <header>
   <div class="navbar">
@@ -43,10 +43,10 @@
 <!-- ========== fin header ========== -->
 <!-- ========== main ========== -->
 
-<main class="d-flex   flex-column">
+<main class="d-flex flex-column">
 
 
-    <div class="w-100 vh-90">
+    <div class=" ">
       <div class="p-5 text-center">
         <h1 class="m-5"> OUR ENGAGEMENTS</h1>
         <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab architecto asperiores aspernatur excepturi id, inventore libero magnam minima natus nihil placeat, possimus provident suscipit totam ut veritatis vero vitae. Nobis?adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
@@ -54,43 +54,43 @@
       </div>
 
       <div class="text-center row row-cols-1 row-cols-md-5 justify-content-evenly mt-5 ">
-        <div class="box col  border p-2 border-5 rounded-5">
+        <div class="box col  border p-2  rounded-2">
           <h3>3 DAYS ACCESS</h3>
           <p class="price">$99</p>
           <div>
-            <button id="btn-decrease4">-</button>
+            <button id="btn-decrease4" class="bg-transparent">-</button>
             <span id="count4">0</span>
-            <button id="btn-increase4">+</button>
+            <button id="btn-increase4" class="bg-transparent">+</button>
           </div>
         </div>
 
-        <div class="box col  border p-2 border-5 rounded-5 ">
+        <div class="box col  border p-2  rounded-2 ">
           <h3>FRIDAY 1st </h3>
           <p class="price">$39</p>
           <div>
-            <button id="btn-decrease">-</button>
+            <button id="btn-decrease" class="bg-transparent">-</button>
             <span id="count">0</span>
-            <button id="btn-increase">+</button>
+            <button id="btn-increase" class="bg-transparent">+</button>
           </div>
         </div>
 
-        <div class="box col  border p-2 border-5 rounded-5 ">
+        <div class="box col  border p-2  rounded-2 ">
           <h3>SATURDAY 2nd </h3>
           <p class="price">$39</p>
           <div>
-            <button id="btn-decrease2">-</button>
+            <button id="btn-decrease2" class="bg-transparent">-</button>
             <span id="count2">0</span>
-            <button id="btn-increase2">+</button>
+            <button id="btn-increase2" class="bg-transparent">+</button>
           </div>
         </div>
 
-        <div class="box col  border p-2 border-5 rounded-5 ">
+        <div class="box col  border p-2  rounded-2 ">
           <h3>SUNDAY 3rd </h3>
           <p class="price">$39</p>
           <div>
-            <button id="btn-decrease3">-</button>
+            <button id="btn-decrease3" class="bg-transparent">-</button>
             <span id="count3">0</span>
-            <button id="btn-increase3">+</button>
+            <button id="btn-increase3" class="bg-transparent">+</button>
           </div>
         </div>
       </div>
@@ -104,7 +104,7 @@
         <ul id="article-list"></ul>
         <hr>
         <span id="panier-price"></span> <br>
-        <button>BUY</button>
+        <button class="box bg-success">BUY</button>
       </div>
     </div>
 </main>
