--- a/autres/volunteer.html
+++ b/autres/volunteer.html
@@ -12,7 +12,7 @@
   <script src="../assets/index.js" defer></script>
 </head>
 
-<body>
+<body class="body-volunteer">
 <!-- ============ header ========== -->
 <header>
   <div class="navbar">
@@ -70,7 +70,7 @@
         <label><input type="checkbox" required> Accept the terms and conditions</label>
       </div>
       <div class="col-md-12">
-        <button type="submit" class="w-75">SUBMIT</button>
+        <button type="submit" class="box w-75">SUBMIT</button>
       </div>
     </form>
   </div>
