--- a/index.html
+++ b/index.html
@@ -5,99 +5,85 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>volunteer</title>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <script src="../assets/index.js" defer></script>
     <script src="../assets/compteur.js" defer></script>
     <script src="../assets/timer.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous" defer></script>
-    <style>
-        .carousel-20-height {
-            height: 20vh; /* 20% de la hauteur de la fenêtre */
-        }
-    </style>
 </head>
 
-<body>
-<!-- ============ header ========== -->
-<header>
-    <div class="navbar">
-        <img src="/assets/img/toggle-white.png" alt="" class="menu-btn shadow">
-        <div class="menu-container">
-            <div class="nav-links">
-                <ul>
-                    <li><a href="index.html">ACCUEIL</a></li>
-                    <li><a href="autres/ticket.html">TICKETS</a></li>
-                    <li><a href="autres/lineup.html">PROGRAMMATION</a></li>
-                    <li><a href="autres/volunteer.html">BÉNÉVOLE</a></li>
-                    <li><a href="autres/infos.html">INFOS</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</header>
-
-<!-- ========== fin header ========== -->
-<!-- ========== main ========== -->
-
-<main class="d-flex   flex-column">
-    <div class="w-100 vh-100 text-center">
-        <div id="carouselExample" class="carousel slide mb-5 carousel-20-height" data-bs-ride="carousel" data-bs-interval="4000">
-            <div class="carousel-inner h-100">
-
-                <div class="carousel-item active h-100">
-                    <img src="assets/img/concert.jpg" class="d-block w-100 h-100 object-fit-cover" alt="...">
-                </div>
-
-                <div class="carousel-item h-100">
-                    <img src="assets/img/tunisie.png" class="d-block w-100 h-100 object-fit-cover" alt="...">
-                </div>
-
-                <div class="carousel-item h-100">
-                    <img src="assets/img/wallpapper.jpg" class="d-block w-100 h-100 object-fit-cover" alt="...">
+<body class="body-index">
+    <!-- ============ header ========== -->
+    <header>
+        <div class="navbar">
+            <img src="/assets/img/toggle-white.png" alt="" class="menu-btn shadow">
+            <div class="menu-container">
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="index.html">ACCUEIL</a></li>
+                        <li><a href="autres/ticket.html">TICKETS</a></li>
+                        <li><a href="autres/lineup.html">PROGRAMMATION</a></li>
+                        <li><a href="autres/volunteer.html">BÉNÉVOLE</a></li>
+                        <li><a href="autres/infos.html">INFOS</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
+    </header>
 
-        <div class="p-5">
-            <h1 class="m-5"> EFREI'STIVAL</h1>
-            <h2 class="m-5"> 1st, 2nd and 3rd august 2025</h2>
-            <h2> 100% des bénéfices revsersé pour la palestine</h2>
-            <br>
-        </div>
+    <!-- ========== fin header ========== -->
+    <!-- ========== main ========== -->
 
-        <div class="box text-white  p-5 vh-60 bg-transparent ">
-            <div class=" row  row-cols-1 row-cols-lg-5 d-flex justify-content-evenly ">
-                <a href="autres/ticket.html"><button type="submit" class=" col mt-2 mb-2  p-4 w-100 text-center  ">BUY TICKETS</button></a>
-                <a href="autres/lineup.html"><button type="submit" class=" col mt-2 mb-2  p-4 w-100  text-center  ">DISCOVER THE LINE-UP</button></a>
-                <a href="autres/volunteer.html"><button type="submit" class=" col mt-2 mb-2  p-4 w-100  text-center  ">BECOME VOLUNTEER</button></a>
-                <a href="autres/infos.html"><button type="submit" class=" col mt-2 mb-2  p-4 w-100 text-center ">GET MORE INFORMATIONS</button></a>
+    <main class="d-flex flex-column">
+        <div class=" text-center">
+            <div class="p-5">
+                <h1 class="m-5 pb-5 titre"> EFREI'STIVAL</h1>
+                <h2 class="m-5 date"> 1st, 2nd and 3rd august 2025</h2>
+                <h2 class="palestine"> 100% OF PROCEEDS DONATED TO PALESTINE</h2>
+                <br>
+            </div>
+
+            <div class=" text-white  p-5 vh-60  ">
+                <div class=" row  row-cols-1 row-cols-lg-5 d-flex justify-content-evenly ">
+                    <a href="autres/ticket.html"><button type="submit" class="t box col mt-2 mb-2  p-4 w-100 text-center border border-5 shadow ">BUY TICKETS</button></a>
+                    <a href="autres/lineup.html"><button type="submit" class="d box col mt-2 mb-2  p-4 w-100  text-center border border-5  shadow ">DISCOVER THE LINE-UP</button></a>
+                    <a href="autres/volunteer.html"><button type="submit" class="b box col mt-2 mb-2  p-4 w-100  text-center border border-5  shadow">BECOME VOLUNTEER</button></a>
+                    <a href="autres/infos.html"><button type="submit" class="g box col mt-2 mb-2  p-4 w-100 text-center border border-5 shadow">GET MORE INFORMATIONS</button></a>
+                </div>
+            </div>
+
+            <div class="box text-white  p-5 vh-60  shadow ">
+                <h1 class="mb-5"> JOIN US IN : </h1>
+                <div id="countdown">
+                    <div id="timer">
+                        <span id="days">--</span>D
+                        <span id="hours">--</span>H
+                        <span id="minutes">--</span>MIN
+                        <span id="seconds">--</span>SEC
+                    </div>
+                </div>
             </div>
         </div>
+    </main>
 
-        <div class="box text-white  p-5 vh-60  shadow ">
-            <h1 class="mb-5"> RENDEZ-VOUS IN : </h1>
+    <!-- ========== fin main ========== -->
+    <!-- ========== footer ========== -->
+
+    <footer class="mt-5">
+        <div class="m-2 text-center">
+            <h6>Copyright &copy; 2025 — All rights reserved.</h6>
+            <h6>Designed by
+                <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
+                <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
+                <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
+                <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
+            </h6>
         </div>
-    </div>
-</main>
-
-<!-- ========== fin main ========== -->
-<!-- ========== footer ========== -->
-
-<footer>
-    <div class="m-2 text-center">
-        <h6>Copyright &copy; 2025 — All rights reserved.</h6>
-        <h6>Designed by
-            <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
-            <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
-            <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
-            <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
-        </h6>
-    </div>
-</footer>
-<!-- ========== fin footer ========== -->
+    </footer>
+    <!-- ========== fin footer ========== -->
 </body>
 </html>
