--- a/autres/ticket.html
+++ b/autres/ticket.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>volunteer</title>
+  <title>TICKETS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/style.css">
@@ -43,54 +43,51 @@
 <!-- ========== fin header ========== -->
 <!-- ========== main ========== -->
 
-<main class="d-flex flex-column">
-
+<main class="d-flex flex-column ">
 
     <div class=" ">
       <div class="p-5 text-center">
-        <h1 class="m-5"> OUR ENGAGEMENTS</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab architecto asperiores aspernatur excepturi id, inventore libero magnam minima natus nihil placeat, possimus provident suscipit totam ut veritatis vero vitae. Nobis?adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
-        <br>
+        <h1 class="m-5 titre-ticket"> RESERVE YOUR PLACES </h1>
       </div>
 
-      <div class="text-center row row-cols-1 row-cols-md-5 justify-content-evenly mt-5 ">
-        <div class="box col  border p-2  rounded-2">
-          <h3>3 DAYS ACCESS</h3>
-          <p class="price">$99</p>
+      <div class="text-center row row-cols-1 row-cols-md-5 justify-content-evenly p-5 g-5 text-black">
+        <div class="box offre col  border   rounded-2 ">
+          <h3 class="day">3 DAYS ACCESS</h3>
+          <h1 class="price">$99</h1>
           <div>
-            <button id="btn-decrease4" class="bg-transparent">-</button>
-            <span id="count4">0</span>
-            <button id="btn-increase4" class="bg-transparent">+</button>
+            <button id="btn-decrease4" class="place bg-transparent">-</button>
+            <span id="count4" class="place">0</span>
+            <button id="btn-increase4" class="place bg-transparent">+</button>
           </div>
         </div>
 
-        <div class="box col  border p-2  rounded-2 ">
-          <h3>FRIDAY 1st </h3>
-          <p class="price">$39</p>
+        <div class="box offre col border   rounded-2 ">
+          <h3 class="day">FRIDAY 1st </h3>
+          <h1 class="price">$39</h1>
           <div>
-            <button id="btn-decrease" class="bg-transparent">-</button>
-            <span id="count">0</span>
-            <button id="btn-increase" class="bg-transparent">+</button>
+            <button id="btn-decrease1" class="place bg-transparent">-</button>
+            <span id="count1" class="place">0</span>
+            <button id="btn-increase1" class="place bg-transparent">+</button>
           </div>
         </div>
 
-        <div class="box col  border p-2  rounded-2 ">
-          <h3>SATURDAY 2nd </h3>
-          <p class="price">$39</p>
+        <div class="box offre col  border   rounded-2 ">
+          <h3 class="day">SATURDAY 2nd </h3>
+          <h1 class="price">$39</h1>
           <div>
-            <button id="btn-decrease2" class="bg-transparent">-</button>
-            <span id="count2">0</span>
-            <button id="btn-increase2" class="bg-transparent">+</button>
+            <button id="btn-decrease2" class="place bg-transparent">-</button>
+            <span id="count2" class="place">0</span>
+            <button id="btn-increase2" class="place bg-transparent">+</button>
           </div>
         </div>
 
-        <div class="box col  border p-2  rounded-2 ">
-          <h3>SUNDAY 3rd </h3>
-          <p class="price">$39</p>
+        <div class="box offre col  border   rounded-2 ">
+          <h3 class="day">SUNDAY 3rd </h3>
+          <h1 class="price">$39</h1>
           <div>
-            <button id="btn-decrease3" class="bg-transparent">-</button>
-            <span id="count3">0</span>
-            <button id="btn-increase3" class="bg-transparent">+</button>
+            <button id="btn-decrease3" class="place bg-transparent">-</button>
+            <span id="count3" class="place">0</span>
+            <button id="btn-increase3" class="place bg-transparent">+</button>
           </div>
         </div>
       </div>
@@ -98,13 +95,13 @@
       <div class="box mt-5">
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h1 class="mb-0">CART</h1>
-          <button id="btn-clear-cart">CLEAR</button>
+          <button id="btn-clear-cart ">CLEAR</button>
         </div>
         <hr>
         <ul id="article-list"></ul>
         <hr>
         <span id="panier-price"></span> <br>
-        <button class="box bg-success">BUY</button>
+        <button class=" buy mt-3 pe-5 ps-5 rounded-1">BUY</button>
       </div>
     </div>
 </main>
